<resources>
    <string name="app_name">PlacesToStay</string>
    <string name="addnew">Add new place</string>
    <string name="add_instructions">To add a new place to stay input the details for it below and click add place.</string>
    <string name="name">Name:</string>
    <string name="type">Type:</string>
    <string-array name="types_array">
        <item>Hotel</item>
        <item>Resort</item>
        <item>Villa</item>
        <item>Hostel</item>
        <item>Camping</item>
    </string-array>
    <string name="price">Price: £</string>
    <string name="add_btn">Add Place</string>
    <string name="save">Save to file</string>
    <string name="load">Load from file</string>
    <string name="remoteload">Load from web</string>
    <string name="remotesave">Save to web</string>
    <string name="preferences">Preferences</string>
    <string name="auto_save_title">Automatic Save</string>
    <string name="auto_save_summary">Turn on/off the automatic saving of places to a file and to the web.</string>
</resources>
